fix: add white space between sections

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,6 @@
 .header {
   background-color: white;
+  box-shadow: 10px 10px 1px rgba($green, .1);
   display: flex;
   height: 40px;
   position: fixed;
