--- a/src/styles/image-article.scss
+++ b/src/styles/image-article.scss
@@ -52,7 +52,7 @@
 
     @include above-sm() {
       flex-direction: row;
-      $value: 40 40 0;
+      $value: 80 40 0;
       @include relative-size(padding, $value);
       
     }
