--- a/src/styles/philosophy.scss
+++ b/src/styles/philosophy.scss
@@ -2,7 +2,7 @@
   padding: 30px 40px 80px;
 
   @include above-sm() {
-    $value: 120 160;
+    $value: 160 160 120;
     @include relative-size(padding, $value);
   }
 
